--- a/performance-2.html
+++ b/performance-2.html
@@ -137,7 +137,7 @@
             function loadGoogleSheetData(spreadsheetId) {
                 gapi.load('client:auth2', function() {
                     gapi.client.init({
-                        apiKey: "YOUR_API_KEY",
+                        apiKey: "AIzaSyCFvX56uc0WNPz2ZTJhpg7Q2pFOgZxt7-0",
                         discoveryDocs: ['https://sheets.googleapis.com/$discovery/rest?version=v4'],
                         scope: 'https://www.googleapis.com/auth/spreadsheets.readonly'
                     }).then(function() {
