--- a/pdi_perf-2.html
+++ b/pdi_perf-2.html
@@ -128,32 +128,38 @@
         }
     </style>
     <script src="https://apis.google.com/js/api.js"></script>
-    <script>
-        window.onload = function() {
-            const table = document.getElementById('dataTable');
-            let totalPercentage = 0;
-            let rowCount = 0;
+   <script>
+    window.onload = function() {
+        const table = document.getElementById('dataTable');
+        let totalPercentage = 0;
+        let rowCount = 0;
 
-            // Function to load Google Sheet data
-            function loadGoogleSheetData(spreadsheetId) {
-                gapi.load('client:auth2', function() {
-                    gapi.client.init({
-                        apiKey: "AIzaSyCFvX56uc0WNPz2ZTJhpg7Q2pFOgZxt7-0",
-                        discoveryDocs: ['https://sheets.googleapis.com/$discovery/rest?version=v4'],
-                        scope: 'https://www.googleapis.com/auth/spreadsheets.readonly'
-                    }).then(function() {
-                        gapi.client.sheets.spreadsheets.values.get({
-                            spreadsheetId: spreadsheetId,
-                            range: 'hours_pdi' // Named range in the Google Sheet
-                        }).then(function(response) {
-                            const values = response.result.values.slice(1); // Exclude the first row (column headings)
-                            parseGoogleSheetData(values);
-                        }, function(error) {
-                            console.error('Error loading Google Sheet data:', error);
-                        });
+        // Function to load Google Sheet data
+        function loadGoogleSheetData(spreadsheetId) {
+            gapi.load('client:auth2', function() {
+                gapi.client.init({
+                    apiKey: "AIzaSyCFvX56uc0WNPz2ZTJhpg7Q2pFOgZxt7-0",
+                    discoveryDocs: ['https://sheets.googleapis.com/$discovery/rest?version=v4'],
+                    scope: 'https://www.googleapis.com/auth/spreadsheets.readonly'
+                }).then(function() {
+                    gapi.client.sheets.spreadsheets.values.get({
+                        spreadsheetId: spreadsheetId,
+                        range: 'Sheet1!A11' // Fetching data from Sheet1 cell A11
+                    }).then(function(response) {
+                        const dataDisplayText = response.result.values[0][0]; // Extracting text value
+                        document.getElementById('dataDisplay').textContent = dataDisplayText; // Populating the text
+                    }, function(error) {
+                        console.error('Error loading Google Sheet data:', error);
                     });
                 });
-            }
+            });
+        }
+
+        // Load Google Sheet data on page load
+        loadGoogleSheetData("1Em_4WKvdHbWu5WR2HCkd4JRVFaTsjJsqPHqDPRj8Gxs");
+    };
+</script>
+
 
             // Function to parse Google Sheet data
             function parseGoogleSheetData(values) {
@@ -293,7 +299,7 @@
 </head>
 <body>
     <div class="content-container">
-        <p>Data Display</p>
+        <p id="dataDisplay">Data Display</p>
         <table id="dataTable"></table>
         <p>Red = 19 hours or less - Orange = 27 hours or less<br>Gold = 32 hours or less - Green = more than 33 hours</p>
         <p>YTD Performance is the percentage of Billed Time to On-Premise time</p>
