--- a/gauge.html
+++ b/gauge.html
@@ -132,7 +132,7 @@ function createChartData(gaugeValue, deltaValue, currentValue, gaugeName, revers
     ];
 
     // Define the HTML structure for the title
-    var titleText = gaugeName + "<br><span style='font-size:0.8em;color:gray'>Higher is Better</span>";
+    var titleText = gaugeName ;
 
     return [{
         domain: { x: [0, 1], y: [0, 1] },
