--- a/gauge-2.html
+++ b/gauge-2.html
@@ -44,7 +44,7 @@
 
 <script>
 // API key from the Developer Console
-var API_KEY = 'AIzaSyCFvX56uc0WNPz2ZTJhpg7Q2pFOgZxt7-0';
+var API_KEY = 'AIzaSyCFvX56uc0WNPz2ZTJhpg7Q2pFOgZxt7-0'; // Replace with your API key
 
 // Array of API discovery doc URLs for APIs used by the application
 var DISCOVERY_DOCS = ["https://sheets.googleapis.com/$discovery/rest?version=v4"];
@@ -69,7 +69,7 @@ function initClient() {
 
 function fetchSheetData() {
     gapi.client.sheets.spreadsheets.values.get({
-        spreadsheetId: '1Em_4WKvdHbWu5WR2HCkd4JRVFaTsjJsqPHqDPRj8Gxs',
+        spreadsheetId: '1Em_4WKvdHbWu5WR2HCkd4JRVFaTsjJsqPHqDPRj8Gxs', // Replace with your spreadsheet ID
         range: 'gauge_data1' // Update the range name
     }).then(function(response) {
         var range = response.result;
@@ -92,7 +92,7 @@ function processData(values) {
 
     // Process each row of data
     values.forEach(function(row) {
-        var gaugeName = row[0]; // Assuming the name is in the first column
+        var gaugeName = row[row.length - 1]; // Gauge name is in the last column
         var gaugeValue = parseFloat(row[1]);
         var deltaValue = parseFloat(row[2]);
         var currentValue = parseFloat(row[3]);
@@ -124,16 +124,20 @@ function processData(values) {
     Plotly.newPlot('myDiv2', data2, layout);
     Plotly.newPlot('myDiv3', data3, layout);
 }
-function createChartData(gaugeValue, deltaValue, currentValue, reversedColors = false) {
+
+function createChartData(gaugeValue, deltaValue, currentValue, gaugeName, reversedColors = false) {
     var steps = [
         { range: [0, deltaValue], color: reversedColors ? "lightgreen" : "lightcoral" },
         { range: [deltaValue, gaugeValue], color: reversedColors ? "lightcoral" : "lightgreen" }
     ];
 
+    // Define the HTML structure for the title
+    var titleText = gaugeName ;
+
     return [{
         domain: { x: [0, 1], y: [0, 1] },
         value: currentValue,
-        title: { text: "Gauge Chart" },
+        title: { text: titleText }, // Use the HTML-formatted title
         type: "indicator",
         mode: "gauge+number+delta",
         delta: { reference: deltaValue },
