updated threshold color

--- a/gauge-2.html
+++ b/gauge-2.html
@@ -146,7 +146,7 @@ function createChartData(gaugeValue, deltaValue, currentValue, gaugeName, revers
             bar: { color: "darkblue" },
             steps: steps,
             threshold: {
-                line: { color: "red", width: 2 },
+                line: { color: "darkblue", width: 2 },
                 value: deltaValue
             }
         }
