changed vertical indicator color

--- a/performance-2.html
+++ b/performance-2.html
@@ -46,7 +46,7 @@
             left: 0;
             height: 100%;
             width: 3px;
-            background-color: white;
+            background-color: darkblue;
             transform: translateX(-50%);
         }
 
