--- a/performance-2.html
+++ b/performance-2.html
@@ -121,7 +121,7 @@
             position: absolute;
             width: 5px;
             height: 100%;
-            background-color: white;
+            background-color: darkblue;
             left: calc((var(--percentage) / 100) * 100% - 1.5px);
             top: 0;
         }
