font and size update

--- a/performance-2.html
+++ b/performance-2.html
@@ -11,6 +11,8 @@
             align-items: center;
             margin: 0;
             background-color: #9E9C9B;
+            font-family: Arial, sans-serif; /* Specify the font family */
+            font-size: 16px; /* Specify the font size */
         }
         
         .content-container {
