--- a/pdi_perf-2.html
+++ b/pdi_perf-2.html
@@ -11,6 +11,8 @@
             align-items: center;
             margin: 0;
             background-color: #9E9C9B;
+            font-family: Arial, sans-serif; /* Specify the font family */
+            font-size: 16px; /* Specify the font size */
         }
         
         .content-container {
@@ -46,7 +48,7 @@
             left: 0;
             height: 100%;
             width: 3px;
-            background-color: white;
+            background-color: darkblue;
             transform: translateX(-50%);
         }
 
@@ -122,7 +124,7 @@
             position: absolute;
             width: 5px;
             height: 100%;
-            background-color: white;
+            background-color: darkblue;
             left: calc((var(--percentage) / 120) * 100% - 1.5px);
             top: 0;
         }
