--- a/pdi_perf-2.html
+++ b/pdi_perf-2.html
@@ -111,6 +111,7 @@
             height: 30px;
             background: linear-gradient(to right, red 0%, orange 30%, gold 40%, green 90%);
             position: relative;
+            border: 1px solid black; /* Add border */
         }
 
         .new-gauge .indicator {
