--- a/performance-2.html
+++ b/performance-2.html
@@ -111,6 +111,7 @@
             height: 30px;
             background: linear-gradient(to right, red 0%, orange 35%, gold 45%, green 85%);
             position: relative;
+            border: 1px solid black; /* Add border */
         }
         .new-gauge .indicator {
             height: 100%;
