--- a/text_rotator-3.html
+++ b/text_rotator-3.html
@@ -71,10 +71,18 @@
             .catch(error => console.error('Error fetching config:', error));
         }
 
-        // Initialize the Google Sheets API client
-        gapi.load('client', init);
+        // Load the Google API client library
+        function loadClient() {
+            gapi.load('client', init);
+        }
+
+        // Load the Google API client library asynchronously
+        (function() {
+            var script = document.createElement('script');
+            script.src = 'https://apis.google.com/js/api.js';
+            script.onload = loadClient;
+            document.body.appendChild(script);
+        })();
     </script>
-    <!-- Load the Google API client library -->
-    <script src="https://apis.google.com/js/api.js"></script>
 </body>
 </html>
