--- a/text_rotator-3.html
+++ b/text_rotator-3.html
@@ -47,7 +47,7 @@
             // Use the Google Sheets API to fetch data
             gapi.client.sheets.spreadsheets.values.get({
                 spreadsheetId: spreadsheetId,
-                range: 'Sheet1!A:A', // Assuming texts are in column A of Sheet1
+                range: 'rotator!A:A', // Assuming texts are in column A of Sheet1
             }).then(function(response) {
                 var values = response.result.values;
                 var texts = values.map(function(row) {
