--- a/pdi_perf-2.html
+++ b/pdi_perf-2.html
@@ -296,11 +296,11 @@
 </head>
 <body>
     <div class="content-container">
-        <p>Data Display</p>
+        <<p><b></b>** Data Displayed is the  Previous Week **</b></p>
         <table id="dataTable"></table>
         <p>Red = 19 hours or less - Orange = 27 hours or less<br>Gold = 32 hours or less - Green = more than 33 hours</p>
         <p>YTD Performance is the percentage of Billed Time to On-Premise time</p>
-        <p>Average Shop Performance:</p>
+        <p><b></b>Average Shop Performance:</b></p>
         <div id="averageGaugeContainer">                
             <div id="averageGauge" class="new-gauge">
                 <div id="averagePercentageDisplay" class="percentage"></div>
