--- a/pdi_perf-2.html
+++ b/pdi_perf-2.html
@@ -296,7 +296,7 @@
 </head>
 <body>
     <div class="content-container">
-        <<p><b></b>** Data Displayed is the  Previous Week **</b></p>
+        <p><b></b>** Data Displayed is the  Previous Week **</b></p>
         <table id="dataTable"></table>
         <p>Red = 19 hours or less - Orange = 27 hours or less<br>Gold = 32 hours or less - Green = more than 33 hours</p>
         <p>YTD Performance is the percentage of Billed Time to On-Premise time</p>
