--- a/test.html
+++ b/test.html
@@ -2,7 +2,101 @@
 <html lang="en">
 <head>
 <meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1.0"><!DOCTYPE html>
+<html lang="en">
+<head>
+<meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
+<title>Days Since Last Safety Incident</title>
+<style>
+    body {
+        font-family: Arial, sans-serif;
+        text-align: center;
+        margin-top: 50px;
+    }
+
+    .date {
+        display: block;
+        width: 140px;
+        margin: 30px auto;
+        text-align: center;
+        position: relative;
+    }
+
+    .date .binds {
+        position: absolute;
+        height: 15px;
+        width: 105px;
+        background: transparent;
+        border: 2px solid #999;
+        border-width: 0 5px;
+        top: -6px;
+        left: 0px;
+        right: 0;
+        margin: auto;
+        border-radius: 5px; 
+    }
+
+    .date .month {
+        background: #a92900; /* Old browsers */
+        background: -moz-linear-gradient(left, #a92900 0%, #d73300 50%, #a92900 100%); /* FF3.6-15 */
+        background: -webkit-linear-gradient(left, #a92900 0%,#d73300 50%,#a92900 100%); /* Chrome10-25,Safari5.1-6 */
+        background: linear-gradient(to right, #a92900 0%,#d73300 50%,#a92900 100%); /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
+        display: block;
+        padding: 8px 0;
+        color: #fff;
+        height: 14px;
+        width:140px;
+        font-weight: bold;
+        border-bottom: 2px solid #333;
+        box-shadow: inset 0 -1px 0 0 #666;
+        border-radius: 20px 20px 0 0;
+        color: #444;
+    }
+
+    .date .day {
+        display: block;
+        margin: 0;
+        padding: 10px 0;
+        font-size: 85px;
+        height: 110px;
+        width: 140px;
+        box-shadow: 0 0 3px #ccc;
+        position: relative;
+        border-radius: 0 0px 20px 20px;
+        background: #d0d0d0;
+        color: #444;
+    }
+</style>
+</head>
+<body>
+    <h1>Days Since Last Safety Incident</h1>
+    <div class="date">
+        <div class="binds"></div>
+        <div class="month">April</div>
+        <div class="day" id="daysSinceIncident">...</div>
+    </div>
+
+    <script>
+        // Function to calculate the number of days between two dates
+        function calculateDays(startDate, endDate) {
+            const oneDay = 24 * 60 * 60 * 1000; // hours * minutes * seconds * milliseconds
+            const start = new Date(startDate);
+            const end = new Date(endDate);
+            const diffDays = Math.round(Math.abs((end - start) / oneDay));
+            return diffDays;
+        }
+
+        // Example dates (replace these with your actual incident date and today's date)
+        const incidentDate = new Date('2024-04-01'); // Example incident date
+        const todayDate = new Date(); // Today's date
+
+        const daysSinceIncident = calculateDays(incidentDate, todayDate);
+        document.getElementById('daysSinceIncident').textContent = daysSinceIncident;
+    </script>
+</body>
+</html>
+
 <title>Days Since Last Safety Incident</title>
 <style>
     body {
