--- a/test.html
+++ b/test.html
@@ -1,8 +1,5 @@
+
 <!DOCTYPE html>
-<html lang="en">
-<head>
-<meta charset="UTF-8">
-<meta name="viewport" content="width=device-width, initial-scale=1.0"><!DOCTYPE html>
 <html lang="en">
 <head>
 <meta charset="UTF-8">
@@ -14,7 +11,6 @@
         text-align: center;
         margin-top: 50px;
     }
-
     .date {
         display: block;
         width: 140px;
@@ -22,7 +18,6 @@
         text-align: center;
         position: relative;
     }
-
     .date .binds {
         position: absolute;
         height: 15px;
@@ -36,24 +31,19 @@
         margin: auto;
         border-radius: 5px; 
     }
-
     .date .month {
-        background: #a92900; /* Old browsers */
-        background: -moz-linear-gradient(left, #a92900 0%, #d73300 50%, #a92900 100%); /* FF3.6-15 */
-        background: -webkit-linear-gradient(left, #a92900 0%,#d73300 50%,#a92900 100%); /* Chrome10-25,Safari5.1-6 */
-        background: linear-gradient(to right, #a92900 0%,#d73300 50%,#a92900 100%); /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
+        background: #a92900;
         display: block;
         padding: 8px 0;
         color: #fff;
         height: 14px;
-        width:140px;
+        width: 140px;
         font-weight: bold;
         border-bottom: 2px solid #333;
         box-shadow: inset 0 -1px 0 0 #666;
         border-radius: 20px 20px 0 0;
         color: #444;
     }
-
     .date .day {
         display: block;
         margin: 0;
@@ -74,58 +64,53 @@
     <div class="date">
         <div class="binds"></div>
         <div class="month">April</div>
-        <div class="day" id="daysSinceIncident">...</div>
+        <div class="day" id="daysSinceIncident">Loading...</div>
     </div>
 
     <script>
-        // Function to calculate the number of days between two dates
-        function calculateDays(startDate, endDate) {
-            const oneDay = 24 * 60 * 60 * 1000; // hours * minutes * seconds * milliseconds
-            const start = new Date(startDate);
-            const end = new Date(endDate);
-            const diffDays = Math.round(Math.abs((end - start) / oneDay));
-            return diffDays;
+        // Function to fetch incident date from Google Sheets
+        function fetchIncidentDate() {
+            fetch('/getIncidentDate')
+                .then(response => response.text())
+                .then(incidentDate => {
+                    document.getElementById('daysSinceIncident').textContent = incidentDate;
+                })
+                .catch(error => console.error('Error:', error));
         }
 
-        // Example dates (replace these with your actual incident date and today's date)
-        const incidentDate = new Date('2024-04-01'); // Example incident date
-        const todayDate = new Date(); // Today's date
-
-        const daysSinceIncident = calculateDays(incidentDate, todayDate);
-        document.getElementById('daysSinceIncident').textContent = daysSinceIncident;
+        // Call fetchIncidentDate function when the page loads
+        fetchIncidentDate();
     </script>
 </body>
 </html>
 
-<title>Days Since Last Safety Incident</title>
-<style>
-    body {
-        font-family: Arial, sans-serif;
-        text-align: center;
-        margin-top: 50px;
+<!-- Server-side code starts here -->
+<script>
+    // Load API key and sheet ID from config.json
+    const config = {
+        apiKey: "YOUR_API_KEY",
+        sheetId: "YOUR_SHEET_ID"
+    };
+
+    // Function to fetch incident date from Google Sheets
+    async function getIncidentDate() {
+        try {
+            const response = await fetch(`https://sheets.googleapis.com/v4/spreadsheets/${config.sheetId}/values/Sheet1!A8?key=${config.apiKey}`);
+            const data = await response.json();
+            return data.values[0][0];
+        } catch (error) {
+            console.error('Error:', error);
+            return 'Error fetching incident date';
+        }
     }
-</style>
-</head>
-<body>
-    <h1>Days Since Last Safety Incident</h1>
-    <p id="daysSinceIncident"></p>
 
-    <script>
-        // Function to calculate the number of days between two dates
-        function calculateDays(startDate, endDate) {
-            const oneDay = 24 * 60 * 60 * 1000; // hours * minutes * seconds * milliseconds
-            const start = new Date(startDate);
-            const end = new Date(endDate);
-            const diffDays = Math.round(Math.abs((end - start) / oneDay));
-            return diffDays;
-        }
-
-        // Example dates (replace these with your actual incident date and today's date)
-        const incidentDate = new Date('2024-04-01'); // Example incident date
-        const todayDate = new Date(); // Today's date
-
-        const daysSinceIncident = calculateDays(incidentDate, todayDate);
-        document.getElementById('daysSinceIncident').textContent = `It has been ${daysSinceIncident} days since the last safety incident.`;
-    </script>
-</body>
-</html>
+    // Route to handle fetching incident date
+    app.get('/getIncidentDate', (req, res) => {
+        getIncidentDate()
+            .then(incidentDate => res.send(incidentDate))
+            .catch(error => {
+                console.error('Error:', error);
+                res.status(500).send('Error fetching incident date');
+            });
+    });
+</script>
