--- a/test.html
+++ b/test.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -68,49 +67,32 @@
     </div>
 
     <script>
+        // Load API key and sheet ID from config.json
+        const config = {
+            apiKey: "YOUR_API_KEY",
+            sheetId: "YOUR_SHEET_ID"
+        };
+
         // Function to fetch incident date from Google Sheets
-        function fetchIncidentDate() {
-            fetch('/getIncidentDate')
-                .then(response => response.text())
-                .then(incidentDate => {
-                    document.getElementById('daysSinceIncident').textContent = incidentDate;
-                })
-                .catch(error => console.error('Error:', error));
+        async function getIncidentDate() {
+            try {
+                const response = await fetch(`https://sheets.googleapis.com/v4/spreadsheets/${config.sheetId}/values/Sheet1!A8?key=${config.apiKey}`);
+                const data = await response.json();
+                return data.values[0][0];
+            } catch (error) {
+                console.error('Error:', error);
+                return 'Error fetching incident date';
+            }
         }
 
-        // Call fetchIncidentDate function when the page loads
-        fetchIncidentDate();
+        // Function to update the incident date on the page
+        async function updateIncidentDate() {
+            const incidentDate = await getIncidentDate();
+            document.getElementById('daysSinceIncident').textContent = incidentDate;
+        }
+
+        // Call updateIncidentDate function when the page loads
+        updateIncidentDate();
     </script>
 </body>
 </html>
-
-<!-- Server-side code starts here -->
-<script>
-    // Load API key and sheet ID from config.json
-    const config = {
-        apiKey: "YOUR_API_KEY",
-        sheetId: "YOUR_SHEET_ID"
-    };
-
-    // Function to fetch incident date from Google Sheets
-    async function getIncidentDate() {
-        try {
-            const response = await fetch(`https://sheets.googleapis.com/v4/spreadsheets/${config.sheetId}/values/Sheet1!A8?key=${config.apiKey}`);
-            const data = await response.json();
-            return data.values[0][0];
-        } catch (error) {
-            console.error('Error:', error);
-            return 'Error fetching incident date';
-        }
-    }
-
-    // Route to handle fetching incident date
-    app.get('/getIncidentDate', (req, res) => {
-        getIncidentDate()
-            .then(incidentDate => res.send(incidentDate))
-            .catch(error => {
-                console.error('Error:', error);
-                res.status(500).send('Error fetching incident date');
-            });
-    });
-</script>
