--- a/test.html
+++ b/test.html
@@ -67,16 +67,10 @@
     </div>
 
     <script>
-        // Load API key and sheet ID from config.json
-        const config = {
-            apiKey: "YOUR_API_KEY",
-            sheetId: "YOUR_SHEET_ID"
-        };
-
         // Function to fetch incident date from Google Sheets
-        async function getIncidentDate() {
+        async function getIncidentDate(apiKey, sheetId) {
             try {
-                const response = await fetch(`https://sheets.googleapis.com/v4/spreadsheets/${config.sheetId}/values/Sheet1!A8?key=${config.apiKey}`);
+                const response = await fetch(`https://sheets.googleapis.com/v4/spreadsheets/${sheetId}/values/Sheet1!A8?key=${apiKey}`);
                 const data = await response.json();
                 return data.values[0][0];
             } catch (error) {
@@ -87,8 +81,14 @@
 
         // Function to update the incident date on the page
         async function updateIncidentDate() {
-            const incidentDate = await getIncidentDate();
-            document.getElementById('daysSinceIncident').textContent = incidentDate;
+            try {
+                const response = await fetch('config.json');
+                const config = await response.json();
+                const incidentDate = await getIncidentDate(config.apiKey, config.sheetId);
+                document.getElementById('daysSinceIncident').textContent = incidentDate;
+            } catch (error) {
+                console.error('Error:', error);
+            }
         }
 
         // Call updateIncidentDate function when the page loads
