--- a/test.html
+++ b/test.html
@@ -67,6 +67,21 @@
     </div>
 
   <script>
+    // Load the Google API client library
+    function loadClient() {
+        gapi.load('client', function() {
+            init();
+        });
+    }
+
+    // Load the Google API client library asynchronously
+    (function() {
+        var script = document.createElement('script');
+        script.src = 'https://apis.google.com/js/api.js';
+        script.onload = loadClient;
+        document.body.appendChild(script);
+    })();
+
     var daysSinceIncidentElement = document.getElementById('daysSinceIncident');
 
     function fetchIncidentDate(spreadsheetId, apiKey) {
@@ -96,21 +111,6 @@
             })
             .catch(error => console.error('Error fetching config:', error));
     }
-
-    // Load the Google API client library
-    function loadClient() {
-        gapi.load('client', init);
-    }
-
-    // Load the Google API client library asynchronously
-    (function() {
-        var script = document.createElement('script');
-        script.src = 'https://apis.google.com/js/api.js';
-        script.onload = loadClient;
-        document.body.appendChild(script);
-    })();
 </script>
-
-
 </body>
 </html>
