--- a/test.html
+++ b/test.html
@@ -10,107 +10,28 @@
         text-align: center;
         margin-top: 50px;
     }
-    .date {
-        display: block;
-        width: 140px;
-        margin: 30px auto;
-        text-align: center;
-        position: relative;
-    }
-    .date .binds {
-        position: absolute;
-        height: 15px;
-        width: 105px;
-        background: transparent;
-        border: 2px solid #999;
-        border-width: 0 5px;
-        top: -6px;
-        left: 0px;
-        right: 0;
-        margin: auto;
-        border-radius: 5px; 
-    }
-    .date .month {
-        background: #a92900;
-        display: block;
-        padding: 8px 0;
-        color: #fff;
-        height: 14px;
-        width: 140px;
-        font-weight: bold;
-        border-bottom: 2px solid #333;
-        box-shadow: inset 0 -1px 0 0 #666;
-        border-radius: 20px 20px 0 0;
-        color: #444;
-    }
-    .date .day {
-        display: block;
-        margin: 0;
-        padding: 10px 0;
-        font-size: 85px;
-        height: 110px;
-        width: 140px;
-        box-shadow: 0 0 3px #ccc;
-        position: relative;
-        border-radius: 0 0px 20px 20px;
-        background: #d0d0d0;
-        color: #444;
-    }
 </style>
 </head>
 <body>
     <h1>Days Since Last Safety Incident</h1>
-    <div class="date">
-        <div class="binds"></div>
-        <div class="month">April</div>
-        <div class="day" id="daysSinceIncident">Loading...</div>
-    </div>
+    <p id="daysSinceIncident"></p>
 
-  <script>
-    // Load the Google API client library
-    function loadClient() {
-        gapi.load('client', function() {
-            init();
-        });
-    }
+    <script>
+        // Function to calculate the number of days between two dates
+        function calculateDays(startDate, endDate) {
+            const oneDay = 24 * 60 * 60 * 1000; // hours * minutes * seconds * milliseconds
+            const start = new Date(startDate);
+            const end = new Date(endDate);
+            const diffDays = Math.round(Math.abs((end - start) / oneDay));
+            return diffDays;
+        }
 
-    // Load the Google API client library asynchronously
-    (function() {
-        var script = document.createElement('script');
-        script.src = 'https://apis.google.com/js/api.js';
-        script.onload = loadClient;
-        document.body.appendChild(script);
-    })();
+        // Example dates (replace these with your actual incident date and today's date)
+        const incidentDate = new Date('2024-04-01'); // Example incident date
+        const todayDate = new Date(); // Today's date
 
-    var daysSinceIncidentElement = document.getElementById('daysSinceIncident');
-
-    function fetchIncidentDate(spreadsheetId, apiKey) {
-        gapi.client.init({
-            apiKey: apiKey,
-            discoveryDocs: ['https://sheets.googleapis.com/$discovery/rest?version=v4'],
-        }).then(function() {
-            return gapi.client.sheets.spreadsheets.values.get({
-                spreadsheetId: spreadsheetId,
-                range: 'Sheet1!A8', // Assuming incident date is in cell A8 of Sheet1
-            });
-        }).then(function(response) {
-            var incidentDate = response.result.values[0][0];
-            daysSinceIncidentElement.textContent = incidentDate;
-        }).catch(function(error) {
-            console.error('Error fetching incident date:', error);
-            daysSinceIncidentElement.textContent = 'Error fetching incident date';
-        });
-    }
-
-    // Load the Google Sheets API client
-    function init() {
-        fetch('config.json')
-            .then(response => response.json())
-            .then(config => {
-                fetchIncidentDate(config.sheetId, config.apiKey);
-            })
-            .catch(error => console.error('Error fetching config:', error));
-    }
-</script>
+        const daysSinceIncident = calculateDays(incidentDate, todayDate);
+        document.getElementById('daysSinceIncident').textContent = `It has been ${daysSinceIncident} days since the last safety incident.`;
+    </script>
 </body>
 </html>
