--- a/test.html
+++ b/test.html
@@ -84,7 +84,7 @@
         // Function to fetch incident date from Google Sheets
         async function fetchIncidentDate() {
             try {
-                const response = await fetch('https://sheets.googleapis.com/v4/spreadsheets/YOUR_SPREADSHEET_ID/values/Sheet1!A8?key=YOUR_API_KEY');
+                const response = await fetch('https://sheets.googleapis.com/v4/spreadsheets/1Em_4WKvdHbWu5WR2HCkd4JRVFaTsjJsqPHqDPRj8Gxs/values/Sheet1!A8?key=AIzaSyCFvX56uc0WNPz2ZTJhpg7Q2pFOgZxt7-0');
                 const data = await response.json();
                 const incidentDate = new Date(data.values[0][0]);
                 const todayDate = new Date();
