--- a/test.html
+++ b/test.html
@@ -66,8 +66,9 @@
 </style>
 </head>
 <body>
+    <p><b>Safety Record</b></p>
     <div class="date">
-        <div class="month">April</div>
+        <div class="month">Days</div>
         <div class="day" id="daysSinceIncident">0</div>
     </div>
 
@@ -99,5 +100,6 @@
         // Call the function to fetch incident date
         fetchIncidentDate();
     </script>
+    <p><b>Days Since Last Incident</b></p>
 </body>
 </html>
