--- a/test.html
+++ b/test.html
@@ -10,7 +10,7 @@
         text-align: center;
         margin-top: 50px;
     }
-    
+
     .container {
         width: 300px;
         height: 300px;
@@ -24,7 +24,6 @@
     .date {
         display: block;
         width: 140px;
-        margin-bottom: 30px;
         text-align: center;
         position: relative;
     }
@@ -77,10 +76,12 @@
 </head>
 <body>
     <div class="container">
+        <p><b>Safety Record</b></p>
         <div class="date">
             <div class="month">Days</div>
             <div class="day" id="daysSinceIncident">0</div>
         </div>
+        <p><b>Days Since Last Incident</b></p>
     </div>
 
     <script>
