--- a/test.html
+++ b/test.html
@@ -23,7 +23,8 @@
 
     .date {
         display: block;
-        width: 140px;
+        width: 70%;
+        margin: 30px auto;
         text-align: center;
         position: relative;
     }
@@ -31,7 +32,7 @@
     .date .binds {
         position: absolute;
         height: 15px;
-        width: 105px;
+        width: 70%;
         background: transparent;
         border: 2px solid #999;
         border-width: 0 5px;
@@ -51,7 +52,7 @@
         padding: 8px 0;
         color: #fff;
         height: 14px;
-        width:140px;
+        width:100%;
         font-weight: bold;
         border-bottom: 2px solid #333;
         box-shadow: inset 0 -1px 0 0 #666;
@@ -63,12 +64,11 @@
         display: block;
         margin: 0;
         padding: 10px 0;
-        font-size: 85px;
-        height: 110px;
-        width: 140px;
+        font-size: 15vw; /* Relative font size */
+        width: 100%;
         box-shadow: 0 0 3px #ccc;
         position: relative;
-        border-radius: 0 0px 20px 20px;
+        border-radius: 0 0 20px 20px;
         background: #d0d0d0;
         color: #444;
     }
