--- a/test.html
+++ b/test.html
@@ -22,9 +22,9 @@
     }
 
     .date {
-        display: block;
         width: 70%;
-        margin: 30px auto;
+        height: 70%;
+        margin: 10% auto;
         text-align: center;
         position: relative;
     }
@@ -66,6 +66,7 @@
         padding: 10px 0;
         font-size: 15vw; /* Relative font size */
         width: 100%;
+        height: 50%;
         box-shadow: 0 0 3px #ccc;
         position: relative;
         border-radius: 0 0 20px 20px;
