--- a/test.html
+++ b/test.html
@@ -10,21 +10,11 @@
         text-align: center;
         margin-top: 50px;
     }
-
-    .container {
-        width: 300px;
-        height: 300px;
-        margin: 0 auto;
-        display: flex;
-        flex-direction: column;
-        justify-content: center;
-        align-items: center;
-    }
-
+    
     .date {
-        width: 70%;
-        height: 70%;
-        margin: 10% auto;
+        display: block;
+        width: 140px;
+        margin: 30px auto;
         text-align: center;
         position: relative;
     }
@@ -32,7 +22,7 @@
     .date .binds {
         position: absolute;
         height: 15px;
-        width: 70%;
+        width: 105px;
         background: transparent;
         border: 2px solid #999;
         border-width: 0 5px;
@@ -52,7 +42,7 @@
         padding: 8px 0;
         color: #fff;
         height: 14px;
-        width:100%;
+        width:140px;
         font-weight: bold;
         border-bottom: 2px solid #333;
         box-shadow: inset 0 -1px 0 0 #666;
@@ -64,25 +54,22 @@
         display: block;
         margin: 0;
         padding: 10px 0;
-        font-size: 15vw; /* Relative font size */
-        width: 100%;
-        height: 50%;
+        font-size: 85px;
+        height: 110px;
+        width: 140px;
         box-shadow: 0 0 3px #ccc;
         position: relative;
-        border-radius: 0 0 20px 20px;
+        border-radius: 0 0px 20px 20px;
         background: #d0d0d0;
         color: #444;
     }
 </style>
 </head>
 <body>
-    <div class="container">
-        <p><b>Safety Record</b></p>
-        <div class="date">
-            <div class="month">Days</div>
-            <div class="day" id="daysSinceIncident">0</div>
-        </div>
-        <p><b>Days Since Last Incident</b></p>
+    <p><b>Safety Record</b></p>
+    <div class="date">
+        <div class="month">Days</div>
+        <div class="day" id="daysSinceIncident">0</div>
     </div>
 
     <script>
@@ -113,5 +100,6 @@
         // Call the function to fetch incident date
         fetchIncidentDate();
     </script>
+    <p><b>Days Since Last Incident</b></p>
 </body>
 </html>
