--- a/db2.html
+++ b/db2.html
@@ -40,6 +40,9 @@
         }
         .half-width {
             width: 50%;
+            display: inline-block; /* Display containers side by side */
+            box-sizing: border-box;
+            padding: 0; /* Reset padding to avoid extra space */
         }
     </style>
 </head>
@@ -53,11 +56,15 @@
         </div>
     </div>
    <div class="right-column">
-        <div class="iframe-container half-width">
-            <iframe src="test.html" frameborder="0"></iframe>
+        <div class="half-width">
+            <div class="iframe-container">
+                <iframe src="https://www.tickcounter.com/widget/countdown/5051472" frameborder="0"></iframe>
+            </div>
         </div>
-        <div class="iframe-container half-width">
-            <iframe src="test.html" frameborder="0"></iframe>
+        <div class="half-width">
+            <div class="iframe-container">
+                <iframe src="test.html" frameborder="0"></iframe>
+            </div>
         </div>
         <div class="iframe-container">
             <iframe src="text_rotator-3.html" frameborder="0"></iframe>
