--- a/db2.html
+++ b/db2.html
@@ -44,6 +44,11 @@
             box-sizing: border-box;
             padding: 0; /* Reset padding to avoid extra space */
         }
+        .right-column .half-width {
+            display: inline-block; /* Display containers side by side */
+            box-sizing: border-box;
+            padding: 0; /* Reset padding to avoid extra space */
+        }
     </style>
 </head>
 <body>
