--- a/db2.html
+++ b/db2.html
@@ -59,7 +59,7 @@
     <div class="column right-column">
         <div class="half-width-container">
             <div class="half-width-iframe">
-                <iframe src="https://www.tickcounter.com/widget/countdown/5051472"></iframe>
+                <iframe src="countdown.html"></iframe>
             </div>
             <div class="half-width-iframe">
                 <iframe src="test.html"></iframe>
